<resources>
    <string name="app_name">Udacity Project</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="main_header">My Nanodegree Apps!</string>
    <string name="spotify_streamer">Spotify Streamer</string>
    <string name="scores_app">Scores App</string>
    <string name="library_app">Library App</string>
    <string name="build_it_bigger">Build it bigger</string>
    <string name="xyz_reader">xyz reader</string>
    <string name="capstone">Capstone: My own app</string>
</resources>
