<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <TextView android:text="@string/main_header" android:layout_width="wrap_content"
        android:layout_height="wrap_content" android:layout_centerHorizontal="true" android:textSize="12pt"
        android:id="@+id/textView" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/spotify_streamer"
        android:id="@+id/spotifystreamer"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="57dp"
        android:layout_alignLeft="@+id/capstone"
        android:layout_alignRight="@+id/capstone"
        android:backgroundTint="#F08C35"
        android:onClick="sendMessageSpotify"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/scores_app"
        android:id="@+id/scoresapp"
        android:layout_below="@+id/spotifystreamer"
        android:layout_centerHorizontal="true"
        android:layout_alignLeft="@+id/capstone"
        android:layout_alignRight="@+id/capstone"
        android:backgroundTint="#F08C35"
        android:onClick="sendMessageScores"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/library_app"
        android:id="@+id/libraryapp"
        android:layout_below="@+id/scoresapp"
        android:layout_centerHorizontal="true"
        android:layout_alignLeft="@+id/capstone"
        android:layout_alignRight="@+id/capstone"
        android:backgroundTint="#F08C35"
    android:onClick="sendMessageLibrary"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/build_it_bigger"
        android:id="@+id/builditbigger"
        android:layout_below="@+id/libraryapp"
        android:layout_centerHorizontal="true"
        android:layout_alignLeft="@+id/capstone"
        android:layout_alignRight="@+id/capstone"
        android:backgroundTint="#F08C35"
        android:onClick="sendMessageBuildItBigger"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/xyz_reader"
        android:id="@+id/xyzreader"
        android:layout_below="@+id/builditbigger"
        android:layout_centerHorizontal="true"
        android:layout_alignLeft="@+id/capstone"
        android:layout_alignRight="@+id/capstone"
        android:backgroundTint="#F08C35"
        android:onClick="sendMessageXYZReader"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/capstone"
        android:id="@+id/capstone"
        android:layout_below="@+id/xyzreader"
        android:layout_centerHorizontal="true"
        android:backgroundTint="#ffff1818"
        android:textColor="#ffffffff"
        android:onClick="sendMessageCapstone"/>


</RelativeLayout>
